--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://use.fontawesome.com/releases/v5.8.1/css/all.css");
+html, body {
+  margin: 0;
+  padding: 0;
+}
