--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 @import url("https://use.fontawesome.com/releases/v5.8.1/css/all.css");
+
+$color_one: #2767b1;
+$color_two: #3052a4;
+$font_family: sans-serif;
+$nav_heigth: 80px;
+
 html, body {
   margin: 0;
   padding: 0;
