--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@ $color_two: #3052a4;
 $background_color_header: #34495e;
 $color_footer: rgba(25, 1, 41, 0.97);
 $font_family: sans-serif;
+$font_color: white;
 $nav_heigth: 100px;
 $footer_heigth: 120px;
 
@@ -19,3 +20,5 @@ html, body {
   padding: 0;
   font-family: $font_family;
 }
+
+
