--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,24 +1,55 @@
 /* You can add global styles to this file, and also import other style files */
 @import url("https://use.fontawesome.com/releases/v5.8.1/css/all.css");
 
-$color_one: #2767b1;
-$color_two: #3052a4;
-$background_color_header: #34495e;
-$color_footer: rgba(25, 1, 41, 0.97);
-$font_family: sans-serif;
-$font_color: white;
-$nav_heigth: 100px;
-$footer_heigth: 120px;
+/** Styles Project**/
 
-html, body {
-  margin: 0;
-  padding: 0;
-}
+$backgroundColorOne: #2767b1;
+$backgroundColorTwo: #3052a4;
+$backgroundColorHeader: #34495e;
+$backgroundColorFooter: rgba(25, 1, 41, 0.97);
+$defaultFontFamily: sans-serif;
+$defaultFontColor: white;
+$defaultNavbarHeight: 100px;
+$defaultFooterHeigth: 120px;
 
 * {
   margin: 0;
   padding: 0;
-  font-family: $font_family;
+  font-family: $defaultFontFamily;
 }
 
+/** Text-decoration Project**/
 
+.textShadow {
+  text-shadow: 0 0 15px black;
+}
+
+.boxShadow {
+  box-shadow: 0 0 15px black;
+}
+
+/** Logo Background **/
+
+.iconInstagram {
+  background: radial-gradient(circle farthest-corner at 35% 90%, #fec564, transparent 50%), radial-gradient(circle farthest-corner at 0 140%, #fec564, transparent 50%), radial-gradient(ellipse farthest-corner at 0 -25%, #5258cf, transparent 50%), radial-gradient(ellipse farthest-corner at 20% -50%, #5258cf, transparent 50%), radial-gradient(ellipse farthest-corner at 100% 0, #893dc2, transparent 50%), radial-gradient(ellipse farthest-corner at 60% -20%, #893dc2, transparent 50%), radial-gradient(ellipse farthest-corner at 100% 100%, #d9317a, transparent), linear-gradient(#6559ca, #bc318f 30%, #e33f5f 50%, #f77638 70%, #fec66d 100%);
+}
+
+.iconTwitter {
+ background: #00c6ff;
+}
+
+.iconFacebook {
+ background: #4267b2;
+}
+
+.iconDiscord {
+ background: #738adb;
+}
+
+.iconTwitch {
+ background: #6441a5;
+}
+
+.iconYoutube {
+  background: #ED3833;
+}
