--- a/src/app/about-us/about-us.component.sass
+++ b/src/app/about-us/about-us.component.sass
@@ -10,7 +10,6 @@ $defaultFontColor: #ffd613
   background-size: cover
 
 #main
-  min-width: 800px
   display: flex
   flex-direction: row
 
@@ -25,18 +24,26 @@ $defaultFontColor: #ffd613
 
 
   @media screen and (max-width: 1250px)
-    .asideRight
-      display: none
+    #main
 
-    .main
-      width: 68%
-
-    @media screen and (max-width: 1100px)
       .asideRight
-        width: 0%
-
-      .asideLeft
-        width: 103px
+        display: none
 
       .main
-        width: calc(100% - 103px)
+        width: 68%
+
+    @media screen and (max-width: 1100px)
+      #main
+        min-width: 400px
+
+        .asideRight
+          width: 0%
+
+        .asideLeft
+          width: 103px
+
+        .main
+          width: calc(100% - 103px)
+
+        .backgroundImage
+          width: 1000px
