--- a/src/app/about-us/main/main.component.sass
+++ b/src/app/about-us/main/main.component.sass
@@ -9,7 +9,7 @@
   align-items: center
   margin: 0 10px
   height: calc(100vh - #{$defaultNavbarHeight})
-  font-size: $font_size
+  font-size: $headingFontSizeSmall
 
   .header
     display: flex
@@ -22,7 +22,7 @@
       font-size: 50px
 
     .description
-      font-size: $font_size
+      font-size: $headingFontSizeSmall
 
     .line
       width: 90%
@@ -30,10 +30,40 @@
       border-radius: 40%
 
 
-    @media screen and (max-width: 1250px)
-      #main
-        width: 68%
+@media screen and (max-width: 1250px)
+  #main
+    width: 68%
 
-      @media screen and (max-width: 1100px)
-        #main
-          width: calc(100% - 103px)
+    .header
+      width: 100%
+
+      h1
+        font-size: 42px
+
+      .description
+        font-size: 16px
+
+  @media screen and (max-width: 1100px)
+    #main
+      width: calc(100% - 103px)
+
+      .header
+        width: 100%
+
+        h1
+          font-size: 36px
+
+        .description
+          font-size: 14px
+
+    @media screen and (max-width: 800px)
+      #main
+        width: calc(100% - 103px)
+
+        .header
+
+          h1
+            font-size: 30px
+
+          .description
+            font-size: 12px
