--- a/src/app/games/games.component.sass
+++ b/src/app/games/games.component.sass
@@ -1,32 +1,3 @@
 @import "~src/styles"
-@import url("https://use.fontawesome.com/releases/v5.8.1/css/all.css")
 
-$game_selected: calc(#{$defaultNavbarHeight} / 3)
-
-#game-view
-  display: flex
-  flex-wrap: nowrap
-  justify-content: flex-end
-  line-height: $game_selected
-  background-color: $backgroundColorHeader
-  padding: 0 20px
-  font-size: $defaultFontSize
-  color: $defaultFontColor
-
-  ul
-    list-style-type: none
-    display: flex
-    flex-direction: row
-
-
-    li
-      display: flex
-
-      a
-        color: $defaultFontColor
-        text-transform: uppercase
-        text-decoration: none
-        padding: 0 10px
-
-      a:hover
-        color: $backgroundColorOne
+$gameSelectedHeight: calc(#{$defaultNavbarHeight} / 3)
