--- a/src/app/about-us/about-us.component.sass
+++ b/src/app/about-us/about-us.component.sass
@@ -3,9 +3,9 @@
 
 $background_image: "src/assets/image/new_logo.jpg"
 
-$defaultFontColor: #ffd613
+$fontColorDefault: #ffd613
 
-.backgroundImage
+.backgroundImageNewLogo
   background: url("~src/assets/image/new_logo_2.jpg") no-repeat 0 center fixed
   background-size: cover
 
@@ -37,7 +37,7 @@ $defaultFontColor: #ffd613
         min-width: 400px
 
         .asideRight
-          width: 0%
+          width: 0
 
         .asideLeft
           width: 103px
@@ -45,5 +45,5 @@ $defaultFontColor: #ffd613
         .main
           width: calc(100% - 103px)
 
-        .backgroundImage
+        .backgroundImageNewLogo
           width: 1000px
