--- a/src/app/about-us/main/main.component.sass
+++ b/src/app/about-us/main/main.component.sass
@@ -8,8 +8,8 @@
   justify-items: center
   align-items: center
   margin: 0 10px
-  height: calc(100vh - #{$defaultNavbarHeight})
-  font-size: $headingFontSizeSmall
+  height: calc(100vh - #{$navbarHeight})
+  font-size: $fontSizeHeadingSmall
 
   .header
     display: flex
@@ -22,11 +22,11 @@
       font-size: 50px
 
     .description
-      font-size: $headingFontSizeSmall
+      font-size: $fontSizeHeadingSmall
 
     .line
       width: 90%
-      border: solid 4px $defaultFontColor
+      border: solid 4px $fontColorDefault
       border-radius: 40%
 
 
