--- a/src/app/about-us/social-media/social-media.component.html
+++ b/src/app/about-us/social-media/social-media.component.html
@@ -1,5 +1,5 @@
 <div class="social_media_overview">
-  <div class="social_media_class shop">
+  <div class="social_media_class default">
     <a href="https://shop.spreadshirt.ch/zoorig-esport/">
       <div class="icons iconTwitter">
         <img src="../../../assets/icons/shopping-cart-solid.svg" alt="">
@@ -10,7 +10,7 @@
   <div class="social_media_class twitter">
     <a routerLink="twitter">
       <div class="icons iconTwitter">
-        <img src="../../assets/icons/twitter.svg" alt="">
+        <img src="../../../assets/icons/twitter.svg" alt="">
       </div>
     </a>
     <a routerLink="twitter" class="link_text"><p>Zoorig on Twitter</p></a>
@@ -18,7 +18,7 @@
   <div class="social_media_class facebook">
     <a href="https://www.facebook.com/zoorigesport/">
       <div class="icons iconFacebook">
-        <img src="../../assets/icons/facebook.svg" alt="">
+        <img src="../../../assets/icons/facebook.svg" alt="">
       </div>
     </a>
     <a href="https://www.facebook.com/zoorigesport/" class="link_text">
@@ -28,7 +28,7 @@
   <div class="social_media_class instagram">
     <a href="https://instagram.com/zoorig.eSport/">
       <div class="icons iconInstagram">
-        <img src="../../assets/icons/instagram.svg" alt="">
+        <img src="../../../assets/icons/instagram.svg" alt="">
       </div>
     </a>
     <a href="https://instagram.com/zoorig.eSport/" class="link_text">
@@ -38,7 +38,7 @@
   <div class="social_media_class discord">
     <a href="https://www.facebook.com/zoorigesport/">
       <div class="icons iconDiscord">
-        <img src="../../assets/icons/discord.svg" alt="">
+        <img src="../../../assets/icons/discord.svg" alt="">
       </div>
     </a>
     <a href="https://www.facebook.com/zoorigesport/" class="link_text"><p>Zoorig on Discord</p></a>
@@ -46,7 +46,7 @@
   <div class="social_media_class twitch">
     <a href="https://www.twitch.tv/zoorigesport">
       <div class="icons iconTwitch">
-        <img src="../../assets/icons/twitch.svg" alt="">
+        <img src="../../../assets/icons/twitch.svg" alt="">
       </div>
     </a>
     <a href="https://www.youtube.com/channel/UCgUP1TYGLz69GQqfb8nlVcQ" class="link_text"><p>Zoorig on Twitch</p></a>
@@ -54,7 +54,7 @@
   <div class="social_media_class youtube">
     <a href="https://www.youtube.com/channel/UCgUP1TYGLz69GQqfb8nlVcQ">
       <div class="icons iconYoutube">
-        <img src="../../assets/icons/youtube.svg" alt="">
+        <img src="../../../assets/icons/youtube.svg" alt="">
       </div>
     </a>
     <a href="https://www.twitch.tv/zoorigesport" class="link_text"><p>Zoorig on Youtube</p></a>
