--- a/src/app/games/call-of-duty/call-of-duty.component.html
+++ b/src/app/games/call-of-duty/call-of-duty.component.html
@@ -1,3 +1,184 @@
-<p>
-  call-of-duty works!
-</p>
+<div class="main">
+  <div class="player">
+    <div class="member">
+      <img class="picture" src="../../../assets/image/member/new_logo.jpg" alt="">
+      <div class="member-contend">
+        <span class="fullName">Marco Meichtry</span>
+        <span class="gamerTag">Actaneon</span>
+        <span class=""></span>
+        <ul class="memberListSocialMedia">
+          <li class="memberListSocialMediaIcons facebook">
+            <a href="">
+              <img src="../../../assets/icons/facebook.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons twitter">
+            <a href="">
+              <img src="../../../assets/icons/twitter.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons instagram">
+            <a href="">
+              <img src="../../../assets/icons/instagram.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons discord">
+            <a href="">
+              <img src="../../../assets/icons/discord.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons twitch">
+            <a href="">
+              <img src="../../../assets/icons/twitch.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons youtube">
+            <a href="">
+              <img src="../../../assets/icons/youtube.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons default">
+            <a href="">
+              <img src="../../../assets/icons/mail.svg" alt="">
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="member">
+      <img class="picture" src="../../../assets/image/member/new_logo.jpg" alt="">
+      <div class="member-contend">
+        <span class="fullName">Marco Meichtry</span>
+        <span class="gamerTag">Actaneon</span>
+        <span class=""></span>
+        <ul class="memberListSocialMedia">
+          <li class="memberListSocialMediaIcons facebook">
+            <a href="">
+              <img src="../../../assets/icons/facebook.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons twitter">
+            <a href="">
+              <img src="../../../assets/icons/twitter.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons instagram">
+            <a href="">
+              <img src="../../../assets/icons/instagram.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons discord">
+            <a href="">
+              <img src="../../../assets/icons/discord.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons twitch">
+            <a href="">
+              <img src="../../../assets/icons/twitch.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons youtube">
+            <a href="">
+              <img src="../../../assets/icons/youtube.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons default">
+            <a href="">
+              <img src="../../../assets/icons/mail.svg" alt="">
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="member">
+      <img class="picture" src="../../../assets/image/member/new_logo.jpg" alt="">
+      <div class="member-contend">
+        <span class="fullName">Marco Meichtry</span>
+        <span class="gamerTag">Actaneon</span>
+        <span class=""></span>
+        <ul class="memberListSocialMedia">
+          <li class="memberListSocialMediaIcons facebook">
+            <a href="">
+              <img src="../../../assets/icons/facebook.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons twitter">
+            <a href="">
+              <img src="../../../assets/icons/twitter.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons instagram">
+            <a href="">
+              <img src="../../../assets/icons/instagram.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons discord">
+            <a href="">
+              <img src="../../../assets/icons/discord.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons twitch">
+            <a href="">
+              <img src="../../../assets/icons/twitch.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons youtube">
+            <a href="">
+              <img src="../../../assets/icons/youtube.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons default">
+            <a href="">
+              <img src="../../../assets/icons/mail.svg" alt="">
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="member">
+      <img class="picture" src="../../../assets/image/member/new_logo.jpg" alt="">
+      <div class="member-contend">
+        <span class="fullName">Marco Meichtry</span>
+        <span class="gamerTag">Actaneon</span>
+        <span class=""></span>
+        <ul class="memberListSocialMedia">
+          <li class="memberListSocialMediaIcons facebook">
+            <a href="">
+              <img src="../../../assets/icons/facebook.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons twitter">
+            <a href="">
+              <img src="../../../assets/icons/twitter.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons instagram">
+            <a href="">
+              <img src="../../../assets/icons/instagram.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons discord">
+            <a href="">
+              <img src="../../../assets/icons/discord.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons twitch">
+            <a href="">
+              <img src="../../../assets/icons/twitch.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons youtube">
+            <a href="">
+              <img src="../../../assets/icons/youtube.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons default">
+            <a href="">
+              <img src="../../../assets/icons/mail.svg" alt="">
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
