--- a/src/app/games/game/game.component.sass
+++ b/src/app/games/game/game.component.sass
@@ -1,12 +1,12 @@
 @import "~src/styles"
 @import "~src/app/games/games.component"
 
-$gameSelectedHeight: calc(#{$defaultNavbarHeight} / 3)
+$gameSelectedHeight: calc(#{$navbarHeight} / 3)
 $rotationTime: 10s
 
 #main
   position: relative
-  height: calc(100vh - #{$defaultNavbarHeight})
+  height: calc(100vh - #{$navbarHeight})
   overflow: hidden
   box-sizing: border-box
 
