--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div id="main" class="backgroundImage">
+<div id="main" class="backgroundImageNewLogo">
 <!--  <div id="sliders">-->
 <!--    <img src="../../assets/image/new_logo.jpg" class="slider_img class_1" alt="">-->
 <!--    <img src="../../assets/image/transparent.png" class="slider_img class_2" alt="">-->
