--- a/src/app/home/home.component.sass
+++ b/src/app/home/home.component.sass
@@ -3,7 +3,7 @@
 
 #main
   position: relative
-  height: calc(100vh - #{$defaultNavbarHeight})
+  height: calc(100vh - #{$navbarHeight})
   overflow: hidden
   box-sizing: border-box
 
