--- a/src/app/footer/footer.component.sass
+++ b/src/app/footer/footer.component.sass
@@ -4,7 +4,7 @@
   margin: 0
   padding: 0
   width: 100vw
-  height: $defaultFooterHeigth
+  height: $footerHeight
   background-color: $backgroundColorFooter
   display: flex
   justify-items: flex-end
