--- a/src/app/games/rocket-league/rocket-league.component.html
+++ b/src/app/games/rocket-league/rocket-league.component.html
@@ -1,100 +1,184 @@
 <div class="main">
-<div class="player">
-  <div class="member">
-    <img class="picture" src="../../../assets/image/member/new_logo.jpg" alt="">
-    <div class="member-contend">
-      <h3 class="title">Player One</h3>
-      <span class="post">Player One</span>
-      <p class="description">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium amet animi dolorem ex explicabo
-        laboriosam, laborum magni necessitatibus neque nobis omnis placeat quidem tenetur? Animi cum fugit nihil
-        quos ut.
-      </p>
-      <ul class="game_social">
-        <li class="game_icon"><a href="">
-          <img src="../../../assets/icons/facebook.svg" alt="">
-        </a></li>
-        <li class="game_icon"><a href="">
-          <img src="../../../assets/icons/twitter.svg" alt="">
-        </a></li>
-        <li class="game_icon"><a href="">
-          <img src="../../../assets/icons/instagram.svg" alt="">
-        </a></li>
-        <li class="game_icon"><a href="">
-          <img src="../../../assets/icons/discord.svg" alt="">
-        </a></li>
-        <li class="game_icon"><a href="">
-          <img src="../../../assets/icons/twitch.svg" alt="">
-        </a></li>
-        <li class="game_icon"><a href="">
-          <img src="../../../assets/icons/youtube.svg" alt="">
-        </a></li>
-      </ul>
+  <div class="player">
+    <div class="member">
+      <img class="picture" src="../../../assets/image/member/new_logo.jpg" alt="">
+      <div class="member-contend">
+        <span class="fullName">Marco Meichtry</span>
+        <span class="gamerTag">Actaneon</span>
+        <span class=""></span>
+        <ul class="memberListSocialMedia">
+          <li class="memberListSocialMediaIcons facebook">
+            <a href="">
+              <img src="../../../assets/icons/facebook.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons twitter">
+            <a href="">
+              <img src="../../../assets/icons/twitter.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons instagram">
+            <a href="">
+              <img src="../../../assets/icons/instagram.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons discord">
+            <a href="">
+              <img src="../../../assets/icons/discord.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons twitch">
+            <a href="">
+              <img src="../../../assets/icons/twitch.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons youtube">
+            <a href="">
+              <img src="../../../assets/icons/youtube.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons default">
+            <a href="">
+              <img src="../../../assets/icons/mail.svg" alt="">
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="member">
+      <img class="picture" src="../../../assets/image/member/new_logo.jpg" alt="">
+      <div class="member-contend">
+        <span class="fullName">Marco Meichtry</span>
+        <span class="gamerTag">Actaneon</span>
+        <span class=""></span>
+        <ul class="memberListSocialMedia">
+          <li class="memberListSocialMediaIcons facebook">
+            <a href="">
+              <img src="../../../assets/icons/facebook.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons twitter">
+            <a href="">
+              <img src="../../../assets/icons/twitter.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons instagram">
+            <a href="">
+              <img src="../../../assets/icons/instagram.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons discord">
+            <a href="">
+              <img src="../../../assets/icons/discord.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons twitch">
+            <a href="">
+              <img src="../../../assets/icons/twitch.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons youtube">
+            <a href="">
+              <img src="../../../assets/icons/youtube.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons default">
+            <a href="">
+              <img src="../../../assets/icons/mail.svg" alt="">
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="member">
+      <img class="picture" src="../../../assets/image/member/new_logo.jpg" alt="">
+      <div class="member-contend">
+        <span class="fullName">Marco Meichtry</span>
+        <span class="gamerTag">Actaneon</span>
+        <span class=""></span>
+        <ul class="memberListSocialMedia">
+          <li class="memberListSocialMediaIcons facebook">
+            <a href="">
+              <img src="../../../assets/icons/facebook.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons twitter">
+            <a href="">
+              <img src="../../../assets/icons/twitter.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons instagram">
+            <a href="">
+              <img src="../../../assets/icons/instagram.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons discord">
+            <a href="">
+              <img src="../../../assets/icons/discord.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons twitch">
+            <a href="">
+              <img src="../../../assets/icons/twitch.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons youtube">
+            <a href="">
+              <img src="../../../assets/icons/youtube.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons default">
+            <a href="">
+              <img src="../../../assets/icons/mail.svg" alt="">
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="member">
+      <img class="picture" src="../../../assets/image/member/new_logo.jpg" alt="">
+      <div class="member-contend">
+        <span class="fullName">Marco Meichtry</span>
+        <span class="gamerTag">Actaneon</span>
+        <span class=""></span>
+        <ul class="memberListSocialMedia">
+          <li class="memberListSocialMediaIcons facebook">
+            <a href="">
+              <img src="../../../assets/icons/facebook.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons twitter">
+            <a href="">
+              <img src="../../../assets/icons/twitter.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons instagram">
+            <a href="">
+              <img src="../../../assets/icons/instagram.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons discord">
+            <a href="">
+              <img src="../../../assets/icons/discord.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons twitch">
+            <a href="">
+              <img src="../../../assets/icons/twitch.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons youtube">
+            <a href="">
+              <img src="../../../assets/icons/youtube.svg" alt="">
+            </a>
+          </li>
+          <li class="memberListSocialMediaIcons default">
+            <a href="">
+              <img src="../../../assets/icons/mail.svg" alt="">
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
-  <div class="member">
-    <img class="picture" src="../../../assets/image/member/new_logo.jpg" alt="">
-    <div class="member-contend">
-      <h3 class="title">Player Two</h3>
-      <span class="post">Player Two</span>
-      <p class="description">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium amet animi dolorem ex explicabo
-        laboriosam, laborum magni necessitatibus neque nobis omnis placeat quidem tenetur? Animi cum fugit nihil
-        quos ut.
-      </p>
-      <ul class="game_social">
-        <li class="game_icon"><a href="">
-          <img src="../../../assets/icons/facebook.svg" alt="">
-        </a></li>
-        <li class="game_icon"><a href="">
-          <img src="../../../assets/icons/twitter.svg" alt="">
-        </a></li>
-        <li class="game_icon"><a href="">
-          <img src="../../../assets/icons/instagram.svg" alt="">
-        </a></li>
-        <li class="game_icon"><a href="">
-          <img src="../../../assets/icons/discord.svg" alt="">
-        </a></li>
-        <li class="game_icon"><a href="">
-          <img src="../../../assets/icons/twitch.svg" alt="">
-        </a></li>
-        <li class="game_icon"><a href="">
-          <img src="../../../assets/icons/youtube.svg" alt="">
-        </a></li>
-      </ul>
-    </div>
-  </div>
-  <div class="member">
-    <img class="picture" src="../../../assets/image/member/new_logo.jpg" alt="">
-    <div class="member-contend">
-      <h3 class="title">Player Three</h3>
-      <span class="post">Player Three</span>
-      <p class="description">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium amet animi dolorem ex explicabo
-        laboriosam, laborum magni necessitatibus neque nobis omnis placeat quidem tenetur? Animi cum fugit nihil
-        quos ut.
-      </p>
-      <ul class="game_social">
-        <li class="game_icon"><a href="">
-          <img src="../../../assets/icons/facebook.svg" alt="">
-        </a></li>
-        <li class="game_icon"><a href="">
-          <img src="../../../assets/icons/twitter.svg" alt="">
-        </a></li>
-        <li class="game_icon"><a href="">
-          <img src="../../../assets/icons/instagram.svg" alt="">
-        </a></li>
-        <li class="game_icon"><a href="">
-          <img src="../../../assets/icons/discord.svg" alt="">
-        </a></li>
-        <li class="game_icon"><a href="">
-          <img src="../../../assets/icons/twitch.svg" alt="">
-        </a></li>
-        <li class="game_icon"><a href="">
-          <img src="../../../assets/icons/youtube.svg" alt="">
-        </a></li>
-      </ul>
-    </div>
-  </div>
-</div>
 </div>
