--- a/src/app/games/rocket-league/rocket-league.component.sass
+++ b/src/app/games/rocket-league/rocket-league.component.sass
@@ -1,27 +1,84 @@
 @import "~src/styles"
 @import "~src/app/games/games.component"
 
-.main
-  position: relative
-  width: 100vh
-  height: auto
 
+.main
+  display: flex
+  flex-wrap: wrap
+  position: relative
+  width: 100vw
+  height: 100%
 
   .player
     display: flex
-    flex-direction: row
+    justify-content: space-around
     flex-wrap: wrap
     width: 100%
+    height: 100%
+
+
+    .member:hover .member-contend
+      right: 0
+
+    .member:hover .picture
+      right: 80%
 
     .member
+      margin: 5px
+      width: 500px
+      height: 250px
       display: flex
       flex-direction: column
+      align-items: center
+      justify-items: center
+      overflow: hidden
+      border-radius: 20%
+      border: 5px solid $backgroundColorOne
+      position: relative
 
       .picture
-        width: 120px
+        display: flex
+        height: 100%
+        width: 100%
+        transition: all 0.4s ease-in-out 0s
+        position: relative
+        right: 0
+
+      .member-contend
+        display: flex
+        flex-direction: column
+        width: 80%
+        height: 100%
+        padding: 10% 5% 0
+        position: absolute
+        top: 0
+        right: -80%
+        transition: all 0.4s ease-in-out 0s
+
+        .fullName
+          display: flex
+          font-size: $fontSizeHeadingMedium
+          font-weight: bold
+
+        .gamerTag,
+        .description
+          display: flex
+          font-size: $fontSizeHeadingSmall
 
 
+        .memberListSocialMedia
+          display: flex
+          flex-wrap: wrap
+          flex-direction: row
+          list-style-type: none
 
+          .memberListSocialMediaIcons
+            display: flex
+            border-radius: 20%
 
-      img
-        width: 20px
+            a
+              padding: 5px
+
+              img
+                width: 25px
+
