--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,21 +5,23 @@
     </div>
     <div class="namMenu">
       <ul class="menu">
-        <li [ngClass]="{linked: href === '/'}"><a routerLink="/">Home</a></li>
-        <li [ngClass]="{linked: href === '/about-us'}"><a routerLink="/about-us">About us</a></li>
-        <li [ngClass]="{linked: href === '/tournaments'}"><a routerLink="/tournaments">Tournaments</a></li>
-        <li [ngClass]="{linked: href === '/games'}"><a routerLink="/games">Games</a></li>
-        <li [ngClass]="{linked: href === '/sponsors'}"><a routerLink="/sponsors">Sponsors</a></li>
-        <label class="hide-menu-btn">
-          <i class="fas fa-times"></i>
-        </label>
+        <li class="test" [ngClass]="{linked: href === ''}"><a routerLink="/">Home</a></li>
+        <li class="test" [ngClass]="{linked: href === 'about-us'}"><a routerLink="/about-us">About us</a></li>
+        <li class="test" [ngClass]="{linked: href === 'tournaments'}"><a routerLink="/tournaments">Tournaments</a></li>
+        <li class="test" [ngClass]="{linked: href === 'games'}"><a routerLink="/games">Games</a></li>
+        <li class="test" [ngClass]="{linked: href === 'sponsors'}"><a routerLink="/sponsors">Sponsors</a></li>
       </ul>
-      <ul *ngIf="href === '/games' || x" class="subMenu">
-          <li [ngClass]="{linked: href === '/games/rocket-league'}"><a routerLink="/games/rocket-league"><span class="game-view">Rocket League</span></a></li>
-          <li [ngClass]="{linked: href === '/games/fortnite'}"><a routerLink="/games/fortnite"><span class="game-view">Fortnite</span></a></li>
-          <li [ngClass]="{linked: href === '/games/super-smash-bros'}"><a routerLink="/games/super-smash-bros"><span class="game-view">Super Smash Bros Ultimate</span></a></li>
-          <li [ngClass]="{linked: href === '/games/call-of-duty'}"><a routerLink="/games/call-of-duty"><span class="game-view">Call of Duty</span></a></li>
-          <li [ngClass]="{linked: href === '/games/fifa'}"><a routerLink="/games/fifa"><span class="game-view">Fifa</span></a></li>
+      <ul class="minMenu">
+        <li>
+          <a href=""><img src="../../assets/icons/bars-solid.svg" alt=""></a>
+        </li>
+      </ul>
+      <ul *ngIf="href === 'games'" class="subMenu">
+          <li [ngClass]="{linked: hrefChildren === 'rocket-league'}"><a routerLink="/games/rocket-league"><span class="game-view">Rocket League</span></a></li>
+          <li [ngClass]="{linked: hrefChildren === 'fortnite'}"><a routerLink="/games/fortnite"><span class="game-view">Fortnite</span></a></li>
+          <li [ngClass]="{linked: hrefChildren === 'super-smash-bros'}"><a routerLink="/games/super-smash-bros"><span class="game-view">Super Smash Bros</span></a></li>
+          <li [ngClass]="{linked: hrefChildren === 'call-of-duty'}"><a routerLink="/games/call-of-duty"><span class="game-view">Call of Duty</span></a></li>
+          <li [ngClass]="{linked: hrefChildren === 'fifa'}"><a routerLink="/games/fifa"><span class="game-view">Fifa</span></a></li>
       </ul>
     </div>
   </div>
